Implemented simple DensityGrid search instead of reRouteWx and tested on SITL